--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="sideheader">
                     <p>Best Of Electronics</p>
                     <div class="viewallbtn">
-                        <p>View All</p>
+                        <p class="flex-all-center">View All</p>
                     </div>
                     <div id="sideheaderimg1"></div>
                 </div>
