--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="best_of_section">
             <div class="best_of_electronics">
                 <div class="sideheader">
-                    <p>Best Of Electronics</p>
+                    <p class="flex-all-center">Best Of Electronics</p>
                     <div class="viewallbtn">
                         <p class="flex-all-center">View All</p>
                     </div>
